# lite

./: .gitignore  CMakeLists.txt  CMakePresets.json  Convert-App-To-Exe.bat  Installer.bat  README.md  Start.bat  Update.bat  changelog.txt  main.cpp  main.py
app/: main.py  update.py
app/modules/Camera/: main.py
app/modules/SDKController/: main.py
app/modules/ScreenCapture/: main.py
app/modules/ShowImage/: main.py
app/modules/TruckSimAPI/: main.py
app/plugins/AR/: main.py
app/plugins/AdaptiveCruiseControl/: main.py
app/plugins/CustomACC/: main.py
app/plugins/End-To-End/: main.py
app/plugins/EndToEnd/: main.py
app/plugins/EndToEndDataCollection/: main.py
app/plugins/LaneDetection/: main.py
app/plugins/NavigationDetectionAI/: main.py
app/plugins/NavigationDetectionDataCollection/: main.py
app/plugins/NavigationDetectionV4/: main.py
app/plugins/PositionEstimation/: main.py
app/plugins/RouteAdvisorClassification/: main.py
app/plugins/ScreenCapture/: main.py
app/plugins/TrafficLightDetection/: main.py
app/plugins/VisionMap/: main.py
app/src/: console.py  helpers.py  plugins.py  pytorch.py  server.py  settings.py  setup.py  translate.py  ui.py  uicomponents.py  updater.py  variables.py
config/: EnterVirtualEnvironment.bat  changelog.txt  requirements.txt  settings.json
cpp-app/: CMakeLists.txt  CMakePresets.json  README.md  cpp-app.cpp  cpp-app.h
cpp-app/src/: customui.cpp  customui.h  opencv.h  pytorch.cpp  pytorch.h  ui.cpp  ui.h
cpp-dll/: .gitignore  CMakeLists.txt  CMakePresets.json  build.bat
cpp-dll/src/: ets2la_lite.def  log.cpp  log.h  main.cpp
plugins/NavigationDetectionAI/: automatic_setup.py  main.py  manual_setup.py
plugins/ScreenCapture/: main.py
src/: ar.cpp  ar.h  camera.cpp  camera.h  capture.cpp  capture.h  classes.py  controller.cpp  controller.h  input.cpp  input.h  navigation_detection.cpp  navigation_detection.h  server.py  settings.py  setup.py  telemetry.cpp  telemetry.h  tracker.cpp  tracker.h  ui.py  uicomponents.py  updater.py  utils.cpp  utils.h  variables.py
src/AR/: ar.cpp  ar.h  circle.cpp  line.cpp  polyline.cpp  rectangle.cpp  text.cpp  wheel_trajectory.cpp
src/PositionEstimation/: keypoints.cpp  position_estimation.cpp  position_estimation.h
src/ar/: ar.h  circle.cpp  line.cpp  polyline.cpp  rectangle.cpp  wheel_trajectory.cpp
